last changes
some changes were added into view and one line was excluded